--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: hello hxm   path: springcloud-config/config-dev.yml  version:1
+  info: hello hxm   path is springcloud-config/config-dev.yml  version:1
